fix: remove overflow hidden from case study parallax

--- a/src/blocks/CaseStudyParallax/index.module.scss
+++ b/src/blocks/CaseStudyParallax/index.module.scss
@@ -23,7 +23,6 @@
 
   & .media {
     margin-right: calc(var(--gutter-h) / -1);
-    overflow: hidden;
 
     img {
       right: -1px;
